# fluid-ic

./: .gitignore  CMakeLists.txt  ReadMe.md  c_cpp_properties.json  demo.mov  fluid.cpp  launch.json  tasks.json
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
main/: fluid.cpp  physics.cpp  physics.h
src/: fluid.cpp  shader.h
src/shaders/: fragment.glsl  vertex.glsl
